--- a/index.Rmd
+++ b/index.Rmd
@@ -29,4 +29,6 @@ In my free time I enjoy spending my time running, biking, working on puzzles, ga
 
 #### **LinkedIn:** https://www.linkedin.com/in/angus-watters-0521a7209/<br>
 
+#### **Phone:** (805) 895-1590
+
 <center>![](UCSB-about-me.jpg)</center>
