edit social links

--- a/index.Rmd
+++ b/index.Rmd
@@ -23,11 +23,11 @@ In my free time I enjoy spending my time running, biking, working on puzzles, ga
 
 ------------------------------------------------------------------------
 
+#### [**LinkedIn**](https://www.linkedin.com/in/angus-watters-0521a7209/)<br>
+
+#### [**GitHub**](https://github.com/anguswg-ucsb)<br>
+
 #### **Email:** [anguswatters\@gmail.com](mailto:anguswatters@gmail.com){.email}<br>
-
-#### **GitHub:**https://github.com/anguswg-ucsb
-
-#### **LinkedIn:** https://www.linkedin.com/in/angus-watters-0521a7209/<br>
 
 #### **Phone:** (805) 895-1590
 
